# SigmaProtocol

./: README.md  _CoqProject  dune-project
paper/CCS/: lstcoq.sty  paper.tex  reference.bib
src/: dune
src/Algebra/: Field.v  Group.v  Hierarchy.v  Integral_domain.v  Monoid.v  Ring.v  Vector_space.v  dune
src/Backend/: HeliosTally.v  Tally.v  dune
src/Crypto/: AndSigma.v  AndSigmaGen.v  ChaumPedersen.v  DecProof.v  DistElgamal.v  Elgamal.v  EncProof.v  EqSigma.v  EqSigmaImp.v  InnerProduct.v  NeqSigma.v  Okamoto.v  OrSigma.v  OrSigmaAlt.v  OrSigmaGen.v  ParallelSigma.v  PedLinearRel.v  Sigma.v  dune
src/Examples/: AndSigmaIns.v  ApprovalIns.v  ChaumPedersenIns.v  DistElgamalIns.v  ElgamalIns.v  EncProofIns.v  EqSigmaIns.v  HeliosTallyIns.v  NeqSigmaIns.v  OrSigmaIns.v  ParaSigmaIns.v  PedLinearRelIns.v  Prime.v  SigmaIns.v  SigmaInsHelios.v  TallyIns.v  dune  primeP.v  primeQ.v
src/Executable/AndSigmacode/: dune  main.ml
src/Executable/Approvalcode/: ballots.txt  dune  main.ml
src/Executable/ChaumPedersencode/: dune  main.ml
src/Executable/DistElgamalcode/: dune  main.ml
src/Executable/Elgamalcode/: dune  main.ml
src/Executable/EncProofcode/: dune  main.ml
src/Executable/EqSigmacode/: dune  main.ml
src/Executable/HeliosDatacode/: dune  input.txt  main.ml
src/Executable/HeliosVerifiercode/: dune  main.ml
src/Executable/HeliosVerifiercode/parsing/: ast.ml  dune  lexer.mll  parser.mly
src/Executable/NeqSigmacode/: dune  main.ml
src/Executable/OrSigmacode/: dune  main.ml
src/Executable/ParaSigmacode/: dune  main.ml
src/Executable/PedLinearRelcode/: dune  main.ml
src/Executable/SigmaHelios/: dune  main.ml
src/Executable/Sigmacode/: dune  main.ml
src/Executable/Tallycode/: ast.ml  dune  lexer.mll  main.ml  output.txt  parser.mly
src/Executable/Tallycode/parsing/: ast.ml  dune  lexer.mll  parser.mly
src/Extraction/: dune
src/Extraction/AndSigmalib/: Extraction.v
src/Extraction/Approvallib/: Extraction.v
src/Extraction/ChaumPedersenlib/: Extraction.v
src/Extraction/DistElgamallib/: Extraction.v
src/Extraction/Elgamallib/: Extraction.v
src/Extraction/EncProoflib/: Extraction.v
src/Extraction/EqSigmalib/: Extraction.v
src/Extraction/HeliosTallylib/: Extraction.v
src/Extraction/NeqSigmalib/: Extraction.v
src/Extraction/OrSigmalib/: Extraction.v
src/Extraction/ParaSigmalib/: Extraction.v
src/Extraction/PedLinearRellib/: Extraction.v
src/Extraction/SigmaHelioslib/: Extraction.v
src/Extraction/Sigmalib/: Extraction.v
src/Extraction/Tallylib/: Extraction.v
src/Frontend/: Approval.v  Elgamal.v  dune
src/Probability/: Distr.v  Prob.v  dune
src/Utility/: Fermat.v  Functions.v  Sha256.v  Util.v  Zpstar.v  dune
src/Wasm/: approval.wasm
